# agentic_rag_llamaIndex_tutorial

./: .gitignore  crop_yeild_pg.py
basics/: CY.tiff  Crop_Yield.py  Lesson_01.ipynb  call-your-own-api-inside-ai-assistant-openai-function-calling.ipynb  pyproject.toml
basics/datasets/: Lesson_02.ipynb  data.json  date_data.json  geojson_data.json
basics/datasets/data/: cy.tiff  output.dbf  output.shp  output.shx
