[tool.poetry]
name = "basics"
version = "0.1.0"
description = ""
authors = ["neoalwayz <neoalwayz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
ipykernel = "^6.29.4"
llama-index = "^0.10.43"
nest-asyncio = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
